Minor changes in ENV

--- a/.env
+++ b/.env
@@ -1,23 +1,14 @@
-# # Email Config
-# EMAIL_HOST=smtp.example.com
-# EMAIL_PORT=465
-# EMAIL_USER=your@email.com
-# EMAIL_PASS=your_password
 
-# # Twilio Config
-# TWILIO_ACCOUNT_SID=your_account_sid
-# TWILIO_AUTH_TOKEN=your_auth_token
-# TWILIO_PHONE_NUMBER=+1234567890
-DATABASE_URL=postgres://postgres:password@localhost:5432/notificationdb
+DATABASE_URL=postgres://user_name:password@localhost:5432/db_name
 PORT=3000
 RABBITMQ_URL=amqp://localhost
 # Email
-EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST=smtp.what.you want
 EMAIL_PORT=465
-EMAIL_USER=adityaapandey2807@gmail.com
-EMAIL_PASS=vtxqkrqucalklcoo
+EMAIL_USER=your mail id
+EMAIL_PASS=your app password
 
 # Twilio
-TWILIO_ACCOUNT_SID=AC20af480a514223478110c0acffd1b6a7
-TWILIO_AUTH_TOKEN=c9ab2c4193d44df9413cda252d5b5935
-TWILIO_PHONE_NUMBER=+19702879577
+TWILIO_ACCOUNT_SID=your_id
+TWILIO_AUTH_TOKEN=your_token
+TWILIO_PHONE_NUMBER=your_ph_number
